# et-demo

./: README.md  README_PL.md  README_RPI.md  pyproject.toml
Results/: evaluation_20260117_123713.json  experiment_20260123_132037.json  experiment_20260126_195410.json  experiment_20260126_201202.json  experiment_20260126_202207.json  experiment_20260126_202553.json  experiment_20260127_181600.json
src/: distance_estimator.py  face_mesh_detector.py  gaze_classifier.py  gaze_predictor.py  head_controller.py  main.py  message_service.py  user_interface.py
src/models/: gc_1x3_all.pth  gc_1x3_loso.pth  gc_1x5_loso.pth
src/scalers/: scaler_1x3_all.pkl  scaler_1x5_loso.pkl
