[tool.poetry]
name = "et-demo"
version = "0.1.0"
description = ""
package-mode = false
authors = ["killpopmusic <tomek.talarczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
# opencv-python provided by system (python3-opencv)
mediapipe = "*"  # Use available ARM64 wheel
screeninfo = "^0.8.1"
scikit-learn = "1.3.2"  # Downgrading for RPi/Numpy 1.24 compat
scipy = "1.10.1"        # Downgrading for RPi/Numpy 1.24 compat
torch = "2.0.1"         # Stable ARM64 release

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
